packages/svelte/tests/validator/samples/bind-group-snippet-parameter/input.svelte
{#snippet test(group)}
	<input type="radio" bind:group={group.name} />
{/snippet}