packages/svelte/tests/compiler-errors/samples/invalid-snippet-binding/main.svelte
{#snippet foo(value)}
	<input bind:value={value}>
{/snippet}
